--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,8 @@
   "description": "A carpool application backend",
   "main": "src/index.ts",
   "scripts": {
-    "start:dev": "npx nodemon"
+    "start:dev": "npx nodemon",
+    "build": "rimraf ./build && tsc"
   },
   "keywords": [],
   "author": "Rama Chandar Rao Shambu",
@@ -13,8 +14,10 @@
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
     "@types/express-session": "^1.17.7",
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "^14.14.41",
     "@types/nodemailer": "^6.4.8",
+    "@types/sanitize-html": "^2.9.0",
     "@types/uuid": "^9.0.1",
     "nodemon": "^2.0.22",
     "typescript": "^4.5.4"
@@ -26,6 +29,7 @@
     "crypto": "^1.0.1",
     "express": "^4.17.1",
     "express-session": "^1.17.3",
+    "jsonwebtoken": "^9.0.0",
     "moment": "^2.29.4",
     "mongoose": "^7.2.2",
     "nodemailer": "^6.9.3",
