--- a/server/package.json
+++ b/server/package.json
@@ -33,6 +33,7 @@
     "moment": "^2.29.4",
     "mongoose": "^7.2.2",
     "nodemailer": "^6.9.3",
+    "sanitize-html": "^2.10.0",
     "uuid": "^9.0.0"
   }
 }
