--- a/server/package.json
+++ b/server/package.json
@@ -27,6 +27,7 @@
     "body-parser": "^1.19.1",
     "buffer": "^6.0.3",
     "crypto": "^1.0.1",
+    "dotenv": "^16.1.4",
     "express": "^4.17.1",
     "express-session": "^1.17.3",
     "jsonwebtoken": "^9.0.0",
