Compressed Image in ImagePicker Coponent and Completed the registration part from the frontend

--- a/server/.env
+++ b/server/.env
@@ -1,6 +1,6 @@
 PORT=4000
-SECRET_KEY=justhelp@groupprojectteam4
-DB_URI=mongodb+srv://gollum:gollum@cluster0.ft2tqhy.mongodb.net/easyRider
-PASSWORD_RESET_EMAIL_SENDER_RECIPIENT_ADDRESS=ram.234rao@gmail.com
+SECRET_KEY="justhelp@groupprojectteam4"
+DB_URI="mongodb+srv://root:root123@projectdb.aeaab.mongodb.net/EasyRider?retryWrites=true&w=majority"
+PASSWORD_RESET_EMAIL_SENDER_RECIPIENT_ADDRESS="ram.234rao@gmail.com"
 USER_EMAIL=
 PASSWORD=
