--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-native-community/datetimepicker": "6.7.3",
     "@react-navigation/native-stack": "^6.9.12",
+    "axios": "^1.4.0",
     "expo": "~48.0.18",
     "expo-image-picker": "~14.1.1",
     "expo-status-bar": "~1.4.4",
