--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,8 +9,10 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "1.17.11",
     "@react-native-community/datetimepicker": "6.7.3",
     "@react-navigation/bottom-tabs": "^6.5.8",
+    "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.12",
     "axios": "^1.4.0",
     "expo": "~48.0.18",
