--- a/server/.env
+++ b/server/.env
@@ -1,6 +1,5 @@
 PORT=4000
 SECRET_KEY="justhelp@groupprojectteam4"
-DB_URI="mongodb+srv://root:root123@projectdb.aeaab.mongodb.net/EasyRider?retryWrites=true&w=majority"
-PASSWORD_RESET_EMAIL_SENDER_RECIPIENT_ADDRESS="ram.234rao@gmail.com"
+DB_URI=
 USER_EMAIL=
 PASSWORD=
