--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/cookie-parser": "^1.4.3",
     "@types/express": "^4.17.13",
     "@types/express-session": "^1.17.7",
     "@types/jsonwebtoken": "^9.0.2",
@@ -26,6 +27,7 @@
     "bcrypt": "^5.1.0",
     "body-parser": "^1.19.1",
     "buffer": "^6.0.3",
+    "cookie-parser": "^1.4.6",
     "crypto": "^1.0.1",
     "dotenv": "^16.1.4",
     "express": "^4.17.1",
@@ -35,6 +37,7 @@
     "mongoose": "^7.2.2",
     "nodemailer": "^6.9.3",
     "sanitize-html": "^2.10.0",
+    "socket.io": "^4.7.1",
     "uuid": "^9.0.0"
   }
 }
