--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,5 @@
 PORT=4000
 SECRET_KEY="justhelp@groupprojectteam4"
-DB_URI=
+DB_URI="mongodb+srv://root:root123@projectdb.aeaab.mongodb.net/EasyRider?retryWrites=true&w=majority"
 USER_EMAIL=
 PASSWORD=
