--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "expo-image-picker": "~14.1.1",
     "expo-status-bar": "~1.4.4",
     "formik": "^2.4.1",
+    "jwt-decode": "^3.1.2",
     "moment": "^2.29.4",
     "react": "18.2.0",
     "react-native": "0.71.8",
