--- a/server/package.json
+++ b/server/package.json
@@ -28,6 +28,7 @@
     "body-parser": "^1.19.1",
     "buffer": "^6.0.3",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^16.1.4",
     "express": "^4.17.1",
