--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@react-native-async-storage/async-storage": "1.17.11",
     "@react-native-community/datetimepicker": "6.7.3",
     "@react-navigation/bottom-tabs": "^6.5.8",
+    "@react-navigation/material-top-tabs": "^6.6.3",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.12",
     "axios": "^1.4.0",
@@ -23,8 +24,10 @@
     "moment": "^2.29.4",
     "react": "18.2.0",
     "react-native": "0.71.8",
+    "react-native-pager-view": "6.1.2",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
+    "react-native-tab-view": "^3.5.2",
     "react-query": "^3.39.3",
     "yup": "^1.2.0"
   },
