--- a/frontend/app.json
+++ b/frontend/app.json
@@ -6,6 +6,15 @@
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
+    "plugins": [
+      
+      [
+        "expo-location",
+        {
+          "locationAlwaysAndWhenInUsePermission": "Allow EasyRider to use your location."
+        },
+      ],
+    ],
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
