--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@gorhom/bottom-sheet": "^4",
     "@react-native-async-storage/async-storage": "1.17.11",
     "@react-native-community/datetimepicker": "6.7.3",
     "@react-navigation/bottom-tabs": "^6.5.8",
@@ -18,13 +19,17 @@
     "axios": "^1.4.0",
     "expo": "~48.0.18",
     "expo-image-picker": "~14.1.1",
+    "expo-location": "~15.1.1",
     "expo-status-bar": "~1.4.4",
     "formik": "^2.4.1",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.4",
     "react": "18.2.0",
     "react-native": "0.71.8",
+    "react-native-gesture-handler": "~2.9.0",
+    "react-native-maps": "1.3.2",
     "react-native-pager-view": "6.1.2",
+    "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-tab-view": "^3.5.2",
@@ -34,6 +39,7 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.0.14",
+    "@types/react-native": "^0.72.2",
     "typescript": "^4.9.4"
   },
   "private": true
