--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,6 +33,7 @@
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-tab-view": "^3.5.2",
+    "react-native-toast-message": "^2.1.6",
     "react-query": "^3.39.3",
     "yup": "^1.2.0"
   },
