--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,7 +26,9 @@
     "moment": "^2.29.4",
     "react": "18.2.0",
     "react-native": "0.71.8",
+    "react-native-dotenv": "^3.4.9",
     "react-native-gesture-handler": "~2.9.0",
+    "react-native-google-places-autocomplete": "^2.5.1",
     "react-native-maps": "1.3.2",
     "react-native-pager-view": "6.1.2",
     "react-native-reanimated": "~2.14.4",
